Link to game.js

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/mousetrap.js"></script>
   <script src="/js/underscore.js"></script>
+  <script src="/js/game.js"></script>
   <script src="/js/application.js"></script>
 
   <title>256!</title>
