--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <!--
-    normalize.css removes cross-browser differences in defaults, e.g.,
-    differences in how form elements appear between Firefox and IE
-    See: http://necolas.github.com/normalize.css/
-  -->
-  <link rel="stylesheet" href="/css/normalize.css">
-  <!--
-    application.css is where you put your styles
-  -->
-  <link rel="stylesheet" href="/css/application.css">
+  <head>
+    <!--
+      normalize.css removes cross-browser differences in defaults, e.g.,
+      differences in how form elements appear between Firefox and IE
+      See: http://necolas.github.com/normalize.css/
+    -->
+    <link rel="stylesheet" href="/css/normalize.css">
+    <!--
+      application.css is where you put your styles
+    -->
+    <link rel="stylesheet" href="/css/application.css">
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="/js/mousetrap.js"></script>
-  <script src="/js/underscore.js"></script>
-  <script src="/js/game.js"></script>
-  <script src="/js/application.js"></script>
+    <script src="/lib/jquery-2.1.4.js"></script>
+    <script src="/js/utils.js"></script>
+    <script src="/js/game.js"></script>
+    <script src="/js/application.js"></script>
 
-  <title>256!</title>
-</head>
-<body>
-
-</body>
+    <title>256!</title>
+  </head>
+  <body>
+    <h2>256!</h2>
+    <div id="header">
+      <p>Score: <span id="score"></span></p>
+      <button id="reset">New Game</button>
+    </div>
+    <div id="container"></div>
+  </body>
 </html>
