Complete game and tests

--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
     <script src="lib/jquery-2.1.4.js"></script>
     <script src="js/util.js"></script>
     <script src="js/game.min.js"></script>
-    <script src="js/gameview.js"></script>
-    <script src="js/application.js"></script>
+    <script src="js/gameview.min.js"></script>
+    <script src="js/application.min.js"></script>
 
     <title>256!</title>
   </head>
   <body>
     <h2>256!</h2>
-    <div class="container"></div>
-      <button id="reset">New Game</button>
-      <div id="game-view"/>
-    </div>
+    <div id="game-view"/>
+  </div>
   </body>
 </html>
