--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     differences in how form elements appear between Firefox and IE
     See: http://necolas.github.com/normalize.css/
   -->
-  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="css/normalize.css">
   <!--
     application.css is where you put your styles
   -->
-  <link rel="stylesheet" href="/css/application.css">
+  <link rel="stylesheet" href="css/application.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="js/mousetrap.js"></script>
@@ -21,6 +21,6 @@
   <title>256!</title>
 </head>
 <body>
-<div class=
+<div class="game-board"></div>
 </body>
 </html>
